Add work .gitconfig.

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,3 +1,28 @@
 [user]
 	email = awlodge@gmail.com
 	name = Alex Lodge
+
+[difftool "vimdiff"]
+	prompt = false
+	cmd = "vimdiff  \"$REMOTE\" \"$LOCAL\""
+
+[color]
+  status = auto
+
+[alias]
+	lg = log --pretty=format:"%C(yellow)%h%Cred%d\\ %Creset%s%Cblue\\ [%cn]" --decorate
+	ll = log --pretty=format:"%C(yellow)%h%Cred%d\\ %Creset%s%Cblue\\ [%cn]" --decorate --numstat
+	ld = log --pretty=format:"%C(yellow)%h\\ %ad%Cred%d\\ %Creset%s%Cblue\\ [%cn]" --decorate --date=relative
+  lgg = log --pretty=format:"%C(yellow)%h%Cred%d\\ %Creset%s%Cblue\\ [%cn]" --decorate --graph
+	llg = log --pretty=format:"%C(yellow)%h%Cred%d\\ %Creset%s%Cblue\\ [%cn]" --decorate --numstat --graph
+	ldg = log --pretty=format:"%C(yellow)%h\\ %ad%Cred%d\\ %Creset%s%Cblue\\ [%cn]" --decorate --date=relative --graph
+	cp = cherry-pick
+	st = status -s
+	cl = clone
+	ci = commit
+	co = checkout
+	br = branch 
+	r = reset
+	r1 = reset HEAD^
+	r2 = reset HEAD^^
+
