Add work tmux conf.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,12 +3,18 @@
 # set correct term
 set -g default-terminal screen-256color
 
+set-window-option -g xterm-keys on
+set-option default-path $HOME
+
 # set prefix key to ctrl+a
 unbind C-b
-set -g prefix C-a 
+set -g prefix C-a
 
 # reload config without killing server
 bind R source-file ~/.tmux.conf \; display-message "  Config reloaded..".
+
+# Jump to HOME
+bind C-a select-window -t :0
 
 # more intuitive keybindings for splitting
 unbind %
@@ -53,10 +59,10 @@ bind-key V neww -n "Vim manual" "exec vim -c 'h user-manual|only'"
 bind C-m command-prompt -p "Open man page for:" "new-window -n 'man:%1' 'exec man %1'"
 
 # ssh
-bind C-s command-prompt -p "ssh to [username]:","ssh to [hostname]:" "new-window -n %2 'ssh %1@%2'"
+bind C-s command-prompt -p "ssh to [username]","ssh to [hostname]" "new-window -n '%2' 'ssh %1@%2'" 
 
 # ping
-bind C-\ command-prompt -p "ping" "new-window -dn 'ping %1' '~/tmuxping.sh %1'"
+bind C-\ command-prompt -p "ping" "new-window -d -n 'ping %1' 'tmping %1'"
 
 # send the prefix to client inside window (ala nested sessions)
 bind-key -n C-a send-prefix
@@ -72,8 +78,8 @@ bind-key K confirm kill-server
 bind-key b set-option status
 
 # ctrl+left/right cycles thru windows
-bind-key -n C-right next
-bind-key -n C-left prev
+bind-key -n C-Right next-window
+bind-key -n C-Left previous-window
 
 # scrollback buffer n lines
 set -g history-limit 10000
@@ -86,13 +92,12 @@ set -g display-panes-time 2000
 
 # start window indexing at one instead of zero
 set -g base-index 0
-set -g renumber-windows on
 
 # enable wm window titles
 set -g set-titles on
 
 # enable auto renaming
-setw -g automatic-rename on
+setw -g automatic-rename off
 
 # border colour
 set -g pane-border-fg blue
@@ -107,7 +112,7 @@ set -g set-titles-string "~ #I [ #W ]"
 set -g window-status-format " #I:#W "
 set -g window-status-current-format "[#I:#W]"
 
-set -g status-left " " 
+set -g status-left " "
 
 set -g status-keys vi
 bind-key -t vi-edit Up history-up
@@ -120,14 +125,12 @@ set -g status-fg white
 set -g status-bg default
 
 # default window title colors
-set-window-option -g window-status-fg black
+set-window-option -g window-status-fg white
 set-window-option -g window-status-bg default
-set-window-option -g window-status-attr dim
 
 # active window title colors
 set-window-option -g window-status-current-fg white
 set-window-option -g window-status-current-bg default
-set-window-option -g window-status-current-attr dim
 
 # command/message line colors
 set -g message-fg white
