--- a/.tmux.conf
+++ b/.tmux.conf
@@ -62,7 +62,7 @@ bind C-m command-prompt -p "Open man page for:" "new-window -n 'man:%1' 'exec ma
 bind C-s command-prompt -p "ssh to [username]","ssh to [hostname]" "new-window -n '%2' '~/bin/tmpingssh %1@%2'" 
 
 # ping
-bind C-\ command-prompt -p "ping" "new-window -d -n 'ping %1' '~/bin/tmping %1'"
+bind C-\ command-prompt -p "ping" "new-window -d -n 'ping %1' '~/bin/tmping %1 \"ping %1\"'"
 
 # send the prefix to client inside window (ala nested sessions)
 bind-key -n C-a send-prefix
