Add bell notifications to tmux window status.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -111,6 +111,8 @@ set -g set-titles-string "~ #I [ #W ]"
 # statusbar --------------------------------------------------------------
 set -g window-status-format " #I:#W "
 set -g window-status-current-format "[#I:#W]"
+set -g window-status-bell-attr bold
+set -g window-status-bell-fg green
 
 set -g status-left " "
 
