Add run-shell tmux key binding

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -58,6 +58,9 @@ bind-key V neww -n "Vim manual" "exec vim -c 'h user-manual|only'"
 # open %% man page
 bind C-m command-prompt -p "Open man page for:" "new-window -n 'man:%1' 'exec man %1'"
 
+# Run shell command
+bind C-r command-prompt 'run-shell "%%"'
+
 # ssh
 bind C-s command-prompt -p "ssh to [username]","ssh to [hostname]" "new-window -n '%2' '~/bin/tmpingssh %1@%2'" 
 
