Add pane ssh commands to .tmux.conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -63,6 +63,8 @@ bind C-r command-prompt 'run-shell "%%"'
 
 # ssh
 bind C-s command-prompt -p "ssh to [username]","ssh to [hostname]" "new-window -n '%2' '~/bin/tmpingssh %1@%2'" 
+bind C-h command-prompt -p "ssh to [username]","ssh to [hostname]" "split-window -v '~/bin/tmpingssh %1@%2'" 
+bind C-v command-prompt -p "ssh to [username]","ssh to [hostname]" "split-window -h '~/bin/tmpingssh %1@%2'" 
 
 # ping
 bind C-\ command-prompt -p "ping" "new-window -d -n 'ping %1' '~/bin/tmping %1 \"ping %1\"'"
